# TradingPlatform

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Readme.md  docker-compose.debug.yml  docker-compose.yml  vcpkg.json
include/: Encoder.h  TSQueue.h  Tokenizer.h  WireFormat.h
platform/: CMakeLists.txt  Readme.md
platform/FixTagTransformer/: CMakeLists.txt  FixTagTransformer.cpp
platform/FixTagTransformer/include/: FixTagTransformer.h
platform/FixTagTransformer/test/: CMakeLists.txt  TestFixTagTransformer.cpp
platform/OrderBook/: CMakeLists.txt  OrderBook.cpp  OrderBookHandler.cpp
platform/OrderBook/include/: LinkedList.h  Match.h  MatchingFields.h  NewOrderBook.h  NodePool.h  Order.h  OrderBook.h  OrderBookFields.h  OrderBookHandler.h  OrderBookLL.h  OrderEventListener.h  OrderEventListner.h  OrderedLinkedList.h  OutgoingEvents.h
platform/OrderBook/include/unused/: Order.h  OrderBookFields.h  OrderBookLL.h  OrderedLinkedList.h
platform/OrderBook/test/: CMakeLists.txt  TestLLIterator.cpp  TestLLOrderedByLess.cpp  TestNewOrderBook.cpp  TestObserver.h  TestOrderBook.cpp  TestOrderBookLL.cpp  TestOrderedByGreater.cpp  TestReverseIterator.cpp
platform/OrderBook/test/unused/: TestLLOrderedByLess.cpp  TestOrderBookLL.cpp  TestOrderedByGreater.cpp
platform/OrderCache/: CMakeLists.txt  OrderCacheImpl.cpp
platform/OrderCache/include/: OrderCache.h  OrderCacheImpl.h
platform/OrderCache/test/: CMakeLists.txt  TestOrderCache.cpp
platform/OrderMatcher/: CMakeLists.txt  OrderMatcher.cpp
platform/OrderMatcher/include/: IncomingEvents.h  Journal.h  MemoryMappedIO.h  MessageHandler.h  MessageQueue.h  NewMessageHandler.h  OrderMatcher.h  SymbolResolver.h  TSQueue.h
services/: CMakeLists.txt
services/ExchangeConnectivity/: C++ Packet Test.docx  outch.cpp
services/MatchingEngine/: CMakeLists.txt  MatchingEngine.cpp
services/client/: BinaryEncoder.h  CMakeLists.txt  CSVFileReader.h  Client.cpp
